# nba-intel

./: .gitignore  README.md  copy_dags.sh  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
airflow/dags/: nba_pipeline.py
api/: main.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_player_performance.sql  fct_standings.sql  fct_team_summary.sql
dbt/models/staging/: schema.yml  sources.yml  stg_player_game_logs.sql  stg_standings.sql  stg_team_game_logs.sql
ingestion/: minio_to_duckdb.py  nba_ingest.py
rag/: chain.py  embed.py  evaluate.py
